Fixing spacing for featured sections

--- a/src/Components/General/Featured/Featured.scss
+++ b/src/Components/General/Featured/Featured.scss
@@ -12,7 +12,9 @@
   }
   &-head {
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    //grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
     justify-content: center;
     place-items: center;
     align-items: center;
